overflow BUG

--- a/src/assets/styles/index.module.scss
+++ b/src/assets/styles/index.module.scss
@@ -58,3 +58,11 @@
   background-size: auto 100vh;
   backdrop-filter: opacity(0.2);
 }
+
+.root {
+  background-color: $secondaryColor;
+  margin: 0px;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
