--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,11 +25,3 @@ $supportColor: rgba(0, 0, 0, 0.3);
 @mixin textShadow() {
   text-shadow: 0 0 10px #18d5ff, 0 0 20px #00d2ff, 0 0 30px #0184a1;
 }
-
-#root {
-  background-color: $secondaryColor;
-  margin: 0px;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
-}
